--- a/breakout/breakout.vcxproj.filters
+++ b/breakout/breakout.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="src\SpriteRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GameLevel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
@@ -59,13 +65,32 @@
     <ClInclude Include="src\SpriteRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GameLevel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\sprite.frag" />
     <None Include="assets\shaders\sprite.vert" />
+    <None Include="assets\levels\one.lvl" />
+    <None Include="assets\levels\two.lvl" />
+    <None Include="assets\levels\three.lvl" />
+    <None Include="assets\levels\four.lvl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\awesomeface.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\textures\block.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\textures\block_solid.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\textures\background.jpg">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
