--- a/breakout/breakout.vcxproj
+++ b/breakout/breakout.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\ParticleGenerator.cpp" />
     <ClCompile Include="src\BallObject.cpp" />
     <ClCompile Include="src\GameLevel.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
@@ -166,6 +167,7 @@
     <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ParticleGenerator.h" />
     <ClInclude Include="src\BallObject.h" />
     <ClInclude Include="src\GameLevel.h" />
     <ClInclude Include="src\GameObject.h" />
@@ -181,6 +183,8 @@
     <None Include="assets\levels\two.lvl" />
     <None Include="assets\levels\three.lvl" />
     <None Include="assets\levels\four.lvl" />
+    <None Include="assets\shaders\particle.frag" />
+    <None Include="assets\shaders\particle.vert" />
     <None Include="assets\shaders\sprite.frag" />
     <None Include="assets\shaders\sprite.vert" />
   </ItemGroup>
@@ -190,6 +194,7 @@
     <Image Include="assets\textures\block.png" />
     <Image Include="assets\textures\block_solid.png" />
     <Image Include="assets\textures\paddle.png" />
+    <Image Include="assets\textures\particle.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
